# fast-vlm-ondevice-kit

./: .bandit  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .releaserc.json  .ruff.toml  .safety-policy.json  .secrets.baseline  AUTONOMOUS_SDLC_COMPLETE_v8.md  AUTONOMOUS_SDLC_ENHANCEMENT_SUMMARY.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE_FINAL.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE_v10.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE_v11.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE_v4.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE_v5.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE_v6.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE_v7.md  AUTONOMOUS_SDLC_EXECUTION_COMPLETE_v9.md  AUTONOMOUS_SDLC_FINAL_REPORT.md  AUTONOMOUS_SDLC_FINAL_SUMMARY.md  AUTONOMOUS_SDLC_IMPLEMENTATION_REPORT.md  AUTONOMOUS_SDLC_OPTIMIZATION_SUMMARY.md  AUTONOMOUS_SDLC_SUMMARY.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ENHANCEMENT_SUMMARY.md  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_DEPLOYMENT_GUIDE_v10.md  PRODUCTION_DEPLOYMENT_GUIDE_v11.md  PROJECT_CHARTER.md  (+66 more)
.devcontainer/: devcontainer.json  setup.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  code-quality-config.yml  dependabot.yml  project-metrics.json  release.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.terragon/: config.yaml  value-metrics.json
benchmarks/: performance_automation.py
deployment_reports/: deployment_manifest_964f925-dirty-20250816-143257.json  deployment_report_ac4276b-dirty-20250823-130205.json
deployment_workspace/: Dockerfile  container-spec-964f925-dirty-20250816-143257.json  container-spec-ac4276b-dirty-20250823-130205.json
docker/: Dockerfile.converter  docker-compose.prod.yml  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  ROADMAP.md  SETUP_REQUIRED.md
docs/adr/: 000-adr-template.md  0001-model-quantization-strategy.md  0002-apple-neural-engine-optimization.md  0003-swift-api-design.md  001-core-ml-quantization-strategy.md  001-quantization-strategy.md  002-swift-api-design.md  README.md
docs/api/: api-documentation.md
docs/compliance/: compliance-framework.md
docs/monitoring/: observability-setup.md
docs/operations/: deployment-guide.md  operational-excellence.md  performance-benchmarking.md
docs/quality/: code-quality-framework.md
docs/runbooks/: README.md
docs/security/: advanced-security-scanning.md  security-implementation.md
docs/testing/: testing-strategy.md
docs/workflows/: GITHUB_ACTIONS_TEMPLATES.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_MANUAL.md  ci-cd-implementation.md  ci-cd-requirements.md  release-management.md
docs/workflows/examples/: cd.yml  ci.yml  security-scan.yml
examples/: advanced_model_management_demo.py  advanced_research_demo.py  basic_conversion.py  neuromorphic_demo.py  research_suite_demo.py
ios/: Package.swift
ios/Sources/FastVLMKit/: FastVLM.swift
ios/Tests/FastVLMKitTests/: FastVLMTests.swift
monitoring/: alert_rules.yml  prometheus.yml
monitoring/grafana/dashboards/: fastvm-overview.json
quality_results/: latest_quality_report.md  quality_gate_aq_1755354510_1706.json  quality_gate_aq_1755354613_1732.json  quality_gate_aq_1755354778_1771.json  quality_gate_aq_1755954086_1800.json  quality_gate_aq_1755954126_1833.json
scripts/: autonomous_value_discovery.py  build.sh  continuous_optimization.py  download_checkpoints.py  metrics_collector.py  production_deployment.py  quality_gates_runner.py  quality_metrics.py  release.sh  release_automation.py  update_version.py  value_executor.py
security_backups/: mobile_performance_optimizer.py.backup.1755354609  research.py.backup.1755354609  security_remediation.py.backup.1755354609  security_remediation.py.backup.1755354782
security_reports/: security_report_20250816_143009.json  security_report_20250816_143302.json
src/fast_vlm_ondevice/: __init__.py  adaptive_learning_engine.py  advanced_error_recovery.py  advanced_optimization.py  advanced_security_framework.py  auto_scaling.py  autonomous_intelligence.py  benchmark.py  benchmarking.py  caching.py  cli.py  comprehensive_logging.py  converter.py  core_pipeline.py  deployment.py  distributed_inference.py  edge_computing_orchestrator.py  enhanced_security_framework.py  error_recovery.py  health.py  high_performance_distributed_engine.py  hyper_performance_engine.py  hyper_scaling_engine.py  input_validation.py  integration_test_suite.py  intelligent_orchestrator.py  logging_config.py  metrics.py  mobile_optimizer.py  model_manager.py  models.py  monitoring.py  neuromorphic.py  next_gen_mobile_optimizer.py  optimization.py  performance.py  performance_monitor.py  production_monitoring.py  production_reliability_engine.py  production_reliability_framework.py  (+10 more)
tests/: __init__.py  conftest.py  test_advanced_integration_suite.py  test_autonomous_system.py  test_autonomous_validation_without_deps.py  test_benchmark.py  test_comprehensive_integration.py  test_config.py  test_converter.py  test_enhanced_core_pipeline.py  test_generation2_robustness.py  test_generation3_scaling.py  test_integration.py  test_models.py  test_neuromorphic.py  test_quantization.py  test_validation.py
tests/e2e/: __init__.py  test_complete_workflow.py  test_mobile_deployment.py
tests/fixtures/: README.md  __init__.py  models.py
tests/integration/: __init__.py  test_conversion_pipeline.py  test_model_conversion_integration.py
tests/performance/: test_benchmarks.py
tests/unit/: __init__.py  test_converter_unit.py
tests/utils/: test_helpers.py
